test/files/neg/badimport.check
badimport.scala:2: error: . expected
import collection
                 ^
one error found
